axonius-assessment/force-app/main/default/objects/Training_Sessions__c/Training_Sessions__c.object-meta.xml
<CustomObject>
    <label>Training Session</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Session Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>