axonius-assessment/force-app/main/default/objects/Training_Sessions__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Duration (min)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>