axonius-assessment/force-app/main/default/objects/Training_Sessions__c/fields/Session_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Date__c</fullName>
    <description>This field adds the duration onto the Session Date to calculate the session end date time. This field was created so a calendar listview can be created.</description>
    <formula>Session_Date__c + ( Duration__c / 1440 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session End Date</label>
    <type>DateTime</type>
</CustomField>