axonius-assessment/force-app/main/default/objects/Training_Sessions__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <description>this field was created to be used in listviews to make it easier to see the trainer, duration, and training type.</description>
    <formula>TEXT(Duration__c) &amp; &quot;-Minute &quot; &amp; TEXT (  Training_Package_Type__c ) &amp; &quot; Session&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Title</label>
    <type>Text</type>
</CustomField>