axonius-assessment/force-app/main/default/objects/Training_Sessions__c/fields/Total_Dogs_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>Total_Dogs_Signed_Up__c</fullName>
    <label>Total Dogs Signed Up</label>
    <summaryForeignKey>Training_Attendee__c.Training_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>