axonius-assessment/force-app/main/default/objects/Training_Sessions__c/fields/Training_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Package_Type__c</fullName>
    <label>Training Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potty Training</fullName>
            </value>
            <value>
                <fullName>Charm</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>