axonius-assessment/force-app/main/default/objects/Training_Sessions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Title__c</columns>
    <columns>Veterinarian__c</columns>
    <columns>Trainer__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Total_Pets_Signed_Up__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>