axonius-assessment/force-app/main/default/objects/Training_Sessions__c/listViews/This_Week_s_Sessions.listView-meta.xml
<ListView>
    <fullName>This_Week_s_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Session_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Training_Package_Type__c</columns>
    <columns>Trainer__c</columns>
    <columns>Veterinarian__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Sessions</label>
</ListView>