axonius-assessment/force-app/main/default/objects/Training_Sessions__c/listViews/Today_s_Sessions.listView-meta.xml
<ListView>
    <fullName>Today_s_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Session_Title__c</columns>
    <columns>Veterinarian__c</columns>
    <columns>Trainer__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Total_Pets_Signed_Up__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Sessions</label>
</ListView>